# command_automator

./: .gitignore  Readme.md  command_automator.py  command_automator.pyw  command_automator_api.pyw  commands_automator_api.py  deploy.cmd  deploy_dev.cmd  deploy_locally.cmd  deploy_script.py  logger.py  logic_handler.py  publish.py  pyproject.toml  pyqt_utils.py  scripts_config.json  set_google_api_key.cmd  signal.py  thread_runner.py
actionables/cmd/: fast_copy.cmd  show_free_space_drive_c.cmd
actionables/python/: convert_win_2_unix.py  remove_parenthesis.py  replace_parenthesis.py
actionables/shell/: convert.sh
app/: __init__.py
app/jobs_tracking/: job_tracking_linkedin_parser.py
app/scripts_manager/: scripts_manager_api.py
app/services/: abstract_persistence_service.py
app/ui/: utils.js
app/utils/: file_utils.py  utils.py
config/: commands-executor-config.json  scripts_config.json
configs/: commands-executor-config.json  scripts_config.json
llm/config/: llm-config.json
llm/mcp_servers/: resume_data.py  resume_mcp.py
publish/: copy_files.cmd  deploy_locally.cmd  kill_process.cmd  publish.cmd  publish.py  rename_executable.cmd  run_pyinstaller.cmd  set_google_api_key.cmd  start_process.cmd
python_utils/: logger.py  pyqt_utils..py
python_utils/pyqt/: pyqt_utils.py  runnable_worker.py  signal.py  text_editor.py  thread_runner.py
resources/: command_automator.js  commands_automator.html  green_style.css  style.css
services/: commands_automator_service.py  configuration_service.py  llm_service.py
src/: .env.local  abstract_api.py  api_utils.py  commands_automator_api.py  commands_automator_initializer.py  llm_api.py
src/commands_automator/: __init__.py  commands_automator_api.py
src/config/: commands_automator.config  mongo_config.json
src/jobs_tracking/: job_tracking_api.py  job_tracking_linkedin_parser.py  models.py
src/llm/: abstract_api.py  llm_api.py  llm_service.py  models.py
src/repository/: abstract_mongo_persist.py  abstract_owner_mongo_persist.py  models.py
src/scripts_manager/: scripts_manager_api.py  scripts_manager_service.py
src/services/: abstract_persistence_service.py  configuration_service.py
src/ui/: commands_automator.css  commands_automator.html  commands_automator.js  spinner.css  tabs.css  tabs.js  utils.js
src/user/: models.py  user_api.py
src/utils/: dependency_container.py  file_utils.py  logger_config.py  utils.py
tabs/: llm_logic_handler.py  llm_prompt_tab.py
tabs/llm/: .gitignore  llm_logic_handler.py  llm_prompt_api.py  llm_prompt_tab.py
tests/: conftest.py  test_jobs.py  test_jobs_advanced.py  test_users.py
tests/job_search/: test_scrapers.py
tests/jobs/: test_job_tracking.py  test_jobs_basic.py
tests/mockups/: mongo_mockups.py
ui/: commands_automator.html  home.html  spinner.css  tabs.css  tabs.js
ui_tests/: test_jobs_advanced.test.js
utils/: convertWin2Unix.py
(+205 files in other folders)
