[tool.poetry]
name = "commandautomator"
version = "0.1.0"
description = "Enable to run scripts that automate common tasks"
authors = ["Tal Druckmann <tdruck@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.13"
keyboard = "^0.13.5"
qtpy = "^2.3.1"
chardet = "^5.1.0"

pyinstaller = "^5.13.0"
pyqt6 = "^6.5.3"
pillow = "^11.1.0"
openai = "^1.64.0"
google-genai = "^1.3.0"
cchardet="^2.1.7"
reportlab="^4.3.1"
python-docx="^1.1.2"


[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "Tal Druckmann", email = "tdruck@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<3.13,<4.0,>=3.10"
dependencies = [
    "keyboard<1.0.0,>=0.13.5",
    "qtpy<3.0.0,>=2.3.1",
    "chardet<6.0.0,>=5.1.0",
    "pyinstaller<6.0.0,>=5.13.0",
    "pyqt6<7.0.0,>=6.5.3",
    "pillow<12.0.0,>=11.1.0",
    "openai<2.0.0,>=1.64.0",
    "google-genai>=1.5.0,<2.0.0",
    "reportlab<5.0.0,>=4.3.1",
    "python-docx<2.0.0,>=1.1.2",
    "mcp[cli]>=1.9.0",
    "pyinput>=0.3.2",
    "pyperclip>=1.9.0",
    "pynput>=1.8.1",
    "google-adk>=0.3.0",
    "litellm>=1.67.4.post1",
    "pywebview>=5.4",
]
name = "commandautomator"
version = "0.1.0"
description = "Enable to run scripts that automate common tasks"
readme = "README.md"
package-mode = false
