[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commandautomator"
version = "0.1.0"
description = "A simple UI that runs scripts that automate commong tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logging>=0.4.9.6",
    "pyinstaller>=6.14.2",
    "pywebview>=5.4",
    "chardet<6.0.0,>=5.1.0",
    "aiofiles>=24.1.0",
    "google-genai>=1.5.0,<2.0.0",
    "python-docx<2.0.0,>=1.1.2",
    "mcp[cli]>=1.9.0",
    "aiohttp>=3.12.14",
    "pillow>=11.3.0,<12.0.0",
    "requests>=2.32.5,<3.0.0",
    "beautifulsoup4>=4.13.5,<5.0.0",
    "lxml>=6.0.1,<7.0.0",
    "playwright>=1.55.1,<2.0.0",
    "pymongo>=4.15.4",
    "motor>=3.7.1",
]

[tool.setuptools]
package-dir = {"" = "src"}
